# phd-research-assistant

./: .env.example  .gitignore  DESIGN.md  EVAL_QUESTIONS.md  PROJECT_SPEC.md  Project Doc.docx  README.md  STARTING_PROMPT.md  WEEK2_SUBMISSION.md  ZOTERO_PINECONE_SETUP.md  app.py  prompts.py  pyproject.toml  rag.py  schemas.py  utils.py  zotero_lib.py
data/: library.json
tabs/: __init__.py  idea_critic.py  lit_explorer.py  paper_digest.py  thesis_coach.py  zotero_chat.py
