[project]
name = "research-assistant"
version = "0.1.0"
description = "Multi-tab Streamlit research assistant (PhD toolkit) — Paper Digest, Literature Explorer, Thesis Outline Coach, Research Idea Critic, Zotero Chat (RAG)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.40",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-pinecone>=0.2",
    "langgraph>=0.2",
    "pinecone>=5.4",
    "pyzotero>=1.5",
    "pypdf>=5.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[tool.uv]
package = false
